[tool.poetry]
name = "bq-kit"
version = "0.1.0"
description = ""
authors = ["Tetsuro Shimada <tetsuro.shimada@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "bq_kit"}]

[tool.poetry.dependencies]
python = "^3.9,<3.10"
pydata-google-auth = "^1.7.0"
google-cloud-bigquery = "^3.10.0"
google-cloud-bigquery-storage = "^2.19.1"
autopep8 = "^2.0.2"
pandas = "^2.0.1"
pyarrow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
