[project]
name = "bq-kit"
version = "0.1.8"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autopep8>=2.3.2",
    "db-dtypes>=1.4.0",
    "google-cloud-bigquery>=3.29.0",
    "google-cloud-bigquery-storage>=2.27.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    "pydata-google-auth>=1.9.1",
]
